--- a/hw2/report.html
+++ b/hw2/report.html
@@ -73,7 +73,7 @@
 <p>The system is written in <code>python3</code> and presented through a web interface served by a Flask server. To launch it, go in the <code>p1/</code> folder and execute <code>server.py</code>. After some seconds a new tab will be opened in the web browser with the interface to the tool.</p>
 <p><img src="images/q1.png" alt="First" /> <img src="images/q2.png" /></p>
 <p>The decisions made work well overall. Some examples of queries and results are shown above.</p>
-<p>In the first query a well known issue of cosine-similarity is shown: shorter documents get higher ranking since normalization penalizes longer documents. Indeed even if the first document contains only one of the query terms, still achieves a higher score than a longer document containing both terms.</p>
+<p>In the first query a well known issue of cosine-similarity is shown: shorter documents get higher ranking since normalization penalizes longer documents. Indeed even if the first document contains fewer occurrences of the query terms, still achieves a higher score than a longer document containing more occurrences of the terms.</p>
 <p>In the second example the query issued is the first document retrieved. As shown in this case the score achieved by the first document is way higher than the average cases given that the query is the document itself. Moreover also the processing time increases drastically.</p>
 <h2 id="problem-2">Problem 2</h2>
 <p>For this problem the <code>preprocessed_announcements.tsv</code> file produced by the preprocessing phase of the previous problem is used.</p>
